Update scheduled vulnerability check versions

--- a/.github/workflows/scheduled-vuln-check.yaml
+++ b/.github/workflows/scheduled-vuln-check.yaml
@@ -3,7 +3,7 @@ name: Scheduled Vulnerability Check
 on:
   schedule:
     # UTC
-    - cron: '0 19 * * WED,SAT'
+    - cron: '0 18 * * WED,SAT'
 
 jobs:
   call-vuln-check-for-master:
@@ -14,20 +14,11 @@ jobs:
       CR_PAT: ${{ secrets.CR_PAT }}
       SLACK_SECURITY_WEBHOOK_URL: ${{ secrets.SLACK_SECURITY_WEBHOOK_URL }}
 
-  call-vuln-check-for-v3_8:
-    uses: ./.github/workflows/vuln-check.yaml
-    with:
-      target-ref: 3.8
-      find-latest-release: false
-    secrets:
-      CR_PAT: ${{ secrets.CR_PAT }}
-      SLACK_SECURITY_WEBHOOK_URL: ${{ secrets.SLACK_SECURITY_WEBHOOK_URL }}
-
   call-vuln-check-for-v3_9:
     uses: ./.github/workflows/vuln-check.yaml
     with:
-      target-ref: 3.9
-      find-latest-release: false
+      target-ref: v3.9
+      find-latest-release: true
     secrets:
       CR_PAT: ${{ secrets.CR_PAT }}
       SLACK_SECURITY_WEBHOOK_URL: ${{ secrets.SLACK_SECURITY_WEBHOOK_URL }}
@@ -35,8 +26,8 @@ jobs:
   call-vuln-check-for-v3_10:
     uses: ./.github/workflows/vuln-check.yaml
     with:
-      target-ref: 3.10
-      find-latest-release: false
+      target-ref: v3.10
+      find-latest-release: true
     secrets:
       CR_PAT: ${{ secrets.CR_PAT }}
       SLACK_SECURITY_WEBHOOK_URL: ${{ secrets.SLACK_SECURITY_WEBHOOK_URL }}
